# app/Http/Requests/UserStore.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Http\Requests;
+
+use App\Models\User;
+use Illuminate\Foundation\Http\FormRequest;
+
+class UserStore extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        $genders = implode(',', array_keys(User::genderMaps()));
+        return [
+            'code'        => 'required|string',
+            'gender'      => "required|in:$genders",
+            'nickName'    => 'required|string',
+            'signature'   => 'required|string',
+            'avatarUrl'   => 'required|url',
+        ];
+    }
+}
